Worked out alignment issues on 1400px and 480px layouts

--- a/css/application.css
+++ b/css/application.css
@@ -53,16 +53,20 @@
 
 /* Blockquote */
 .blockquote {
+  display: flex;
+  flex-basis: 100%;
+  justify-content: center;
+  align-self: center;
   border-left: 6px solid #5BE0C0;
-  margin-left: 40px;
-  margin-right: 40px;
   padding-left: 25px;
   border-radius: 5px;
   font-size: 1.5em;
   font-style: italic;
-  font-color: #333;
+  color: #333;
   margin-bottom: 2em;
-  margin-top: 2em; }
+  margin-top: 2em;
+  margin-right: 40px;
+  margin-left: 40px; }
 
 /* Lists */
 ul {
@@ -137,13 +141,11 @@ ul li {
 
 /* Form Styling */
 .form {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-start;
-  flex-basis: 100%;
+  display: block;
+  margin: 0 auto;
   outline: none;
-  border: none; }
+  border: none;
+  width: 400px; }
 
 .form__label--hidden {
   display: none; }
@@ -156,16 +158,12 @@ ul li {
   border-left: none;
   margin-bottom: 35px;
   padding: 15px;
-  outline: none; }
-
-legend {
-  margin-left: -30px; }
+  outline: none;
+  width: 100%; }
 
 .img--logo {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-basis: 100%; }
+  display: block;
+  margin: 0 auto; }
 
 .img--frame {
   border: 1px solid #c0c0c0;
@@ -202,12 +200,9 @@ legend {
   line-height: 1.7em; }
 
 .grid__row {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 2em;
-  flex-basis: 100%; }
+  display: block;
+  width: 100%;
+  margin: 0 auto; }
 
 .grid__col--3.theme__colors {
   border: none;
@@ -215,8 +210,7 @@ legend {
   background-color: #d09cd9;
   padding: 10px;
   margin: 5px;
-  color: #333;
-  width: 290px; }
+  color: #333; }
 
 .grid__col--4.theme__colors {
   display: flex;
@@ -229,11 +223,11 @@ legend {
   background-color: #8EEDFC;
   padding: 10px;
   margin: 5px;
-  color: #333;
-  width: 290px; }
+  color: #333; }
 
 .grid__col--4 {
   display: flex;
+  flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start; }
 
@@ -243,8 +237,7 @@ legend {
   background-color: #82DC9E;
   padding: 10px;
   margin: 5px;
-  color: #333;
-  width: 290px; }
+  color: #333; }
 
 .grid__col--6.theme__colors {
   border: none;
@@ -252,8 +245,7 @@ legend {
   background-color: #4DA2BB;
   padding: 10px;
   margin: 5px;
-  color: #333;
-  width: 290px; }
+  color: #333; }
 
 .grid__col--7.theme__colors {
   border: none;
@@ -261,8 +253,7 @@ legend {
   background-color: #E6A3A1;
   padding: 10px;
   margin: 5px;
-  color: #333;
-  width: 290px; }
+  color: #333; }
 
 .grid__col--8.theme__colors {
   border: none;
@@ -270,8 +261,7 @@ legend {
   background-color: #FD9D85;
   padding: 10px;
   margin: 5px;
-  color: #333;
-  width: 290px; }
+  color: #333; }
 
 .grid__col--9 {
   display: block;
@@ -289,7 +279,6 @@ legend {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: 290px;
   flex-basis: 100%; }
 
 /* Beastly Media Queries*/
@@ -389,7 +378,10 @@ legend {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    align-items: flex-start; } }
+    align-items: flex-start; }
+
+  .form__input {
+    width: 100%; } }
 @media only screen and (min-width: 1024px) {
   .container {
     margin: 5px 40px 5px 40px; }
@@ -450,7 +442,9 @@ legend {
     justify-content: space-around; }
 
   .grid__col--12 {
-    display: flex; }
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around; }
 
   .nav {
     display: flex;
